# eyetalk

./: CHANGES_2026_04_25.md  CHANGES_2026_04_25b.md  UI_REFERENCE.md  keyboard_output.txt  mouse_keyboard_output.txt  pyproject.toml  scan_path_20260216_112430.csv  scan_path_20260216_112748.csv  scan_path_20260216_113248.csv  scan_path_20260216_113439.csv  scan_path_20260216_113614.csv  scan_path_20260216_113940.csv  scan_path_20260216_114732.csv  scan_path_20260216_115554.csv  scan_path_20260216_115734.csv  scan_path_20260216_115859.csv  scan_path_20260216_120130.csv  scan_path_20260216_121153.csv  scan_path_20260216_121417.csv  scan_path_20260216_121641.csv  scan_path_20260216_122000.csv  swipe_templates.json  tts_test.py  user_usage.json
docs/: head_rotation_calibration.md
openvoice_runtime/processed/speaker_embeddings/: speaker_17ddbb63eeeebb0e.pth  speaker_a4e271a8f3b079d2.pth
speech_cache/dictionary_words/: manifest.json
src - OLD/eyetrax/: __init__.py  _version.py  constants.py  gaze.py
src - OLD/eyetrax/app/: build_model.py  demo.py  virtualcam.py  words.txt
src - OLD/eyetrax/calibration/: __init__.py  adaptive.py  common.py  dense_grid.py  five_point.py  lissajous.py
src - OLD/eyetrax/filters/: base.py  kalman.py  kde.py  noop.py
src - OLD/eyetrax/models/: __init__.py  base.py  elastic_net.py  ridge.py  svr.py  tiny_mlp.py
src - OLD/eyetrax/utils/: screen.py  video.py
src/eyetrax/: cli.py  constants.py  gaze.py
src/eyetrax/app/: __init__.py  accuracy_demo.py  build_dictionary_speech_cache.py  build_phrase_cache.py  build_synth_speech_cache.py  (+13 more)
(+18 files in other folders)
